--- a/tvmaze/tvmaze/UI/UIListViewCell.xib
+++ b/tvmaze/tvmaze/UI/UIListViewCell.xib
@@ -8,7 +8,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UItvshowCell" customModule="tvmaze" customModuleProvider="target">
+            <connections>
+                <outlet property="posterImageView" destination="aIQ-iY-kOC" id="grH-TP-aHg"/>
+                <outlet property="titleLabel" destination="oz5-mq-uoC" id="mzB-3b-7GX"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIListViewCell">
             <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
@@ -32,7 +37,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="titleLabel" destination="oz5-mq-uoC" id="87T-1c-6fc"/>
+                <outlet property="imageView" destination="aIQ-iY-kOC" id="p1O-fT-OvX"/>
             </connections>
             <point key="canvasLocation" x="142.02898550724638" y="-145.98214285714286"/>
         </view>
