--- a/tvmaze/tvmaze/Views/ListViewCell.xib
+++ b/tvmaze/tvmaze/Views/ListViewCell.xib
@@ -8,20 +8,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UItvshowCell" customModule="tvmaze" customModuleProvider="target">
-            <connections>
-                <outlet property="posterImageView" destination="aIQ-iY-kOC" id="grH-TP-aHg"/>
-                <outlet property="titleLabel" destination="oz5-mq-uoC" id="mzB-3b-7GX"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIListViewCell">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ListViewCell" customModule="tvmaze" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aIQ-iY-kOC">
                     <rect key="frame" x="0.0" y="0.0" width="119" height="120"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oz5-mq-uoC">
                     <rect key="frame" x="169" y="50" width="33" height="21"/>
@@ -37,7 +33,8 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="imageView" destination="aIQ-iY-kOC" id="p1O-fT-OvX"/>
+                <outlet property="posterImageView" destination="aIQ-iY-kOC" id="xVc-cr-aiV"/>
+                <outlet property="titleLabel" destination="oz5-mq-uoC" id="Y1q-OJ-1dp"/>
             </connections>
             <point key="canvasLocation" x="142.02898550724638" y="-145.98214285714286"/>
         </view>
@@ -45,6 +42,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
