--- a/tvmaze/tvmaze/Views/Base.lproj/Main.storyboard
+++ b/tvmaze/tvmaze/Views/Base.lproj/Main.storyboard
@@ -64,49 +64,54 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c8P-7t-fcP">
-                                <rect key="frame" x="20" y="64" width="381" height="332"/>
+                                <rect key="frame" x="20" y="64" width="381" height="313.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c7u-eZ-sOK">
-                                        <rect key="frame" x="0.0" y="0.0" width="211" height="332"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="211" height="313.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="211" id="vhg-Kj-TR3"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJh-En-ZQM">
-                                        <rect key="frame" x="209" y="0.0" width="172" height="332"/>
+                                        <rect key="frame" x="209" y="0.0" width="172" height="313.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-.-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgA-PU-iEt">
-                                                <rect key="frame" x="119" y="291" width="22" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-.-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgA-PU-iEt">
+                                                <rect key="frame" x="103" y="261" width="22" height="21"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rating title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfc-mx-hpC">
-                                                <rect key="frame" x="11" y="291" width="82" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfc-mx-hpC">
+                                                <rect key="frame" x="11" y="261.5" width="82" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="t4H-85-HB5">
-                                                <rect key="frame" x="11" y="320" width="150" height="4"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t4H-85-HB5">
+                                                <rect key="frame" x="10" y="289.5" width="152" height="4"/>
                                             </progressView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsu-yW-Asb">
-                                                <rect key="frame" x="70" y="8" width="33" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsu-yW-Asb">
+                                                <rect key="frame" x="5" y="8" width="162" height="21"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Vsu-yW-Asb" secondAttribute="trailing" constant="5" id="7Av-fk-2Ol"/>
+                                            <constraint firstItem="t4H-85-HB5" firstAttribute="top" secondItem="fgA-PU-iEt" secondAttribute="bottom" constant="7.5" id="CcN-Qx-azm"/>
+                                            <constraint firstItem="t4H-85-HB5" firstAttribute="top" secondItem="jfc-mx-hpC" secondAttribute="bottom" constant="7" id="ClA-UG-jVN"/>
+                                            <constraint firstAttribute="bottom" secondItem="t4H-85-HB5" secondAttribute="bottom" constant="20" id="Kj7-8a-OGO"/>
+                                            <constraint firstItem="jfc-mx-hpC" firstAttribute="leading" secondItem="BJh-En-ZQM" secondAttribute="leading" constant="11" id="O3c-em-b1z"/>
+                                            <constraint firstItem="fgA-PU-iEt" firstAttribute="leading" secondItem="jfc-mx-hpC" secondAttribute="trailing" constant="10" id="bXR-9R-tkc"/>
+                                            <constraint firstItem="Vsu-yW-Asb" firstAttribute="top" secondItem="BJh-En-ZQM" secondAttribute="top" constant="8" id="jWC-N2-g4z"/>
+                                            <constraint firstItem="Vsu-yW-Asb" firstAttribute="leading" secondItem="BJh-En-ZQM" secondAttribute="leading" constant="5" id="jWj-KL-SfV"/>
+                                            <constraint firstItem="t4H-85-HB5" firstAttribute="leading" secondItem="BJh-En-ZQM" secondAttribute="leading" constant="10" id="qbF-ZK-h7h"/>
+                                            <constraint firstAttribute="trailing" secondItem="t4H-85-HB5" secondAttribute="trailing" constant="10" id="tI9-Bk-ViE"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="332" id="4CJ-S9-utS"/>
                                     <constraint firstItem="BJh-En-ZQM" firstAttribute="leading" secondItem="c7u-eZ-sOK" secondAttribute="trailing" constant="-2" id="95i-EJ-vhN"/>
                                     <constraint firstItem="BJh-En-ZQM" firstAttribute="top" secondItem="c8P-7t-fcP" secondAttribute="top" id="FmA-Pj-8T8"/>
                                     <constraint firstAttribute="bottom" secondItem="BJh-En-ZQM" secondAttribute="bottom" id="WJN-kr-5tf"/>
@@ -116,12 +121,15 @@
                                     <constraint firstAttribute="bottom" secondItem="c7u-eZ-sOK" secondAttribute="bottom" id="z2w-x8-8XK"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AbP-iO-Lhw">
+                                <rect key="frame" x="20" y="397.5" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="4mC-OH-gxU">
-                                <rect key="frame" x="20" y="404" width="374" height="438"/>
+                                <rect key="frame" x="20" y="428.5" width="374" height="413.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="438" id="wVg-cC-Qze"/>
-                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -132,12 +140,17 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="4mC-OH-gxU" firstAttribute="leading" secondItem="lmx-V5-XYk" secondAttribute="leading" constant="20" id="7Wx-b6-lY8"/>
+                            <constraint firstItem="lmx-V5-XYk" firstAttribute="trailing" secondItem="AbP-iO-Lhw" secondAttribute="trailing" constant="20" id="Dvu-Oq-pyi"/>
                             <constraint firstItem="c8P-7t-fcP" firstAttribute="top" secondItem="lmx-V5-XYk" secondAttribute="top" constant="20" id="KWk-UH-7YW"/>
                             <constraint firstItem="lmx-V5-XYk" firstAttribute="trailing" secondItem="4mC-OH-gxU" secondAttribute="trailing" constant="20" id="LWU-E3-zDW"/>
+                            <constraint firstItem="AbP-iO-Lhw" firstAttribute="leading" secondItem="lmx-V5-XYk" secondAttribute="leading" constant="20" id="UQj-hD-gW4"/>
                             <constraint firstItem="c8P-7t-fcP" firstAttribute="leading" secondItem="4mC-OH-gxU" secondAttribute="trailing" constant="-374" id="V7K-hr-cHA"/>
                             <constraint firstItem="c8P-7t-fcP" firstAttribute="leading" secondItem="lmx-V5-XYk" secondAttribute="leading" constant="20" id="bDc-tb-wTa"/>
+                            <constraint firstItem="c8P-7t-fcP" firstAttribute="height" secondItem="IzT-0O-Ybn" secondAttribute="height" multiplier="0.35" id="geU-wR-jro"/>
+                            <constraint firstItem="4mC-OH-gxU" firstAttribute="top" secondItem="AbP-iO-Lhw" secondAttribute="bottom" constant="10" id="hpS-Gn-Aws"/>
                             <constraint firstItem="lmx-V5-XYk" firstAttribute="bottom" secondItem="4mC-OH-gxU" secondAttribute="bottom" constant="20" id="rLM-co-Yut"/>
                             <constraint firstItem="lmx-V5-XYk" firstAttribute="trailing" secondItem="c8P-7t-fcP" secondAttribute="trailing" constant="13" id="z49-lr-ldU"/>
+                            <constraint firstItem="AbP-iO-Lhw" firstAttribute="top" secondItem="c8P-7t-fcP" secondAttribute="bottom" constant="20" id="zFT-AI-kTY"/>
                         </constraints>
                     </view>
                     <connections>
@@ -160,9 +173,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
